--- a/src/app/character/character.component.html
+++ b/src/app/character/character.component.html
@@ -1,4 +1,4 @@
-<div class="card bg-light" (click)="viewDetails(character.id)">
+<div class="card" (click)="viewDetails(character.id)">
     <div class="card-header">
         <b>{{character.name}}</b>
     </div>
