--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,8 @@
+body{
+    background-image: url("/assets/bg-stars.png");
+    background-size: contain;
+}
+
 .circle{
     width: 10px;
     height: 10px;
